--- a/tracks.yaml
+++ b/tracks.yaml
@@ -174,4 +174,5 @@ tracks:
     ros_distro: rolling
     vcs_type: git
     vcs_uri: https://github.com/ros2/ros2_tracing.git
-    version: :{auto}
+    version: 8.0.0
+    version_saved: :{auto}
