--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = d9293a34
-	trim = 
-	trimbase = 
+	base = 4656ab20
+	trim = tracetools_read
+	trimbase = d9293a34
