--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = 6ce73fd0
-	trim = 
-	trimbase = 
+	base = b56c5c91
+	trim = ros2trace
+	trimbase = 6ce73fd0
