--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = d1788bba
-	trim = 
-	trimbase = 
+	base = 80b9f7d9
+	trim = lttngpy
+	trimbase = d1788bba
