--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = 1915a0a6
-	trim = 
-	trimbase = 
+	base = 9a9ec1fb
+	trim = tracetools_launch
+	trimbase = 1915a0a6
