--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = 2a3658df
-	trim = 
-	trimbase = 
+	base = 4ba451ce
+	trim = tracetools_test
+	trimbase = 2a3658df
