--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 8d0f61dd
-	base = e0dc8fc0
-	trim = 
-	trimbase = 
+	base = c4929376
+	trim = tracetools
+	trimbase = e0dc8fc0
