--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools
-	previous = 
-	base = 9e2204c5
+	previous = 9e2204c5
+	base = 98308544
 	trim = 
 	trimbase = 
