--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools_test
-	previous = 
-	base = 9191d9b9
+	previous = 9191d9b9
+	base = 4bd4f428
 	trim = 
 	trimbase = 
