--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools_launch
-	previous = 
-	base = 415a7330
+	previous = 415a7330
+	base = 576061cf
 	trim = 
 	trimbase = 
