--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools_trace
-	previous = 
-	base = e23a3b6c
+	previous = e23a3b6c
+	base = be75223b
 	trim = 
 	trimbase = 
