--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools_read
-	previous = 
-	base = 4656ab20
+	previous = 4656ab20
+	base = 56d79e45
 	trim = 
 	trimbase = 
