--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/tracetools_read
-	previous = 
-	base = 90848d6b
+	previous = 90848d6b
+	base = e4f12ad1
 	trim = 
 	trimbase = 
