--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/lttngpy
-	previous = 
-	base = 2cbc1abd
+	previous = 2cbc1abd
+	base = 6f8772e9
 	trim = 
 	trimbase = 
