--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/ros2trace
-	previous = 
-	base = 95c36a00
+	previous = 95c36a00
+	base = 3484f4ac
 	trim = 
 	trimbase = 
