--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/ros2trace
-	previous = 
-	base = b56c5c91
+	previous = b56c5c91
+	base = a923a5f7
 	trim = 
 	trimbase = 
