--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/ros2trace
-	previous = 
-	base = 72ccb9a6
+	previous = 72ccb9a6
+	base = cfbfc972
 	trim = 
 	trimbase = 
