--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/lttngpy
-	previous = 
-	base = 80b9f7d9
+	previous = 80b9f7d9
+	base = 1e1b9634
 	trim = 
 	trimbase = 
