--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/lttngpy
-	previous = 
-	base = 176631b1
+	previous = 176631b1
+	base = 9586ce73
 	trim = 
 	trimbase = 
