--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools_read
-	previous = 
-	base = 32655ada
+	previous = 32655ada
+	base = 54edc990
 	trim = 
 	trimbase = 
