--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools_launch
-	previous = 
-	base = 9a9ec1fb
+	previous = 9a9ec1fb
+	base = 5b8915cd
 	trim = 
 	trimbase = 
