--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools_launch
-	previous = 
-	base = 0469d5a6
+	previous = 0469d5a6
+	base = 633bc0cf
 	trim = 
 	trimbase = 
