--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools_test
-	previous = 
-	base = 4ba451ce
+	previous = 4ba451ce
+	base = 10fc1577
 	trim = 
 	trimbase = 
