--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools_test
-	previous = 
-	base = 8b629c8f
+	previous = 8b629c8f
+	base = cb13aaf2
 	trim = 
 	trimbase = 
