--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools_trace
-	previous = 
-	base = 760ee0c0
+	previous = 760ee0c0
+	base = 66103f6d
 	trim = 
 	trimbase = 
