--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools_trace
-	previous = 
-	base = 5dc09135
+	previous = 5dc09135
+	base = 7c1d273e
 	trim = 
 	trimbase = 
