--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/tracetools
-	previous = 
-	base = c4929376
+	previous = c4929376
+	base = aed65202
 	trim = 
 	trimbase = 
