--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/tracetools
-	previous = 
-	base = fd520782
+	previous = fd520782
+	base = c1abcba4
 	trim = 
 	trimbase = 
